--- a/GB/Views/Securite/Menu.cshtml
+++ b/GB/Views/Securite/Menu.cshtml
@@ -78,8 +78,10 @@
                             <th class="column-title">Code</th>
                             <th class="column-title">@ViewBag.Lang.Name_french</th>
                             <th class="column-title">@ViewBag.Lang.Name_english</th>
+                            <th class="column-title">@ViewBag.Lang.Menu_group</th>
+                            <th class="column-title">@ViewBag.Lang.Views</th>
                             <th class="column-title last" width="50px">Action</th>
-                            <th class="bulk-actions" colspan="4">
+                            <th class="bulk-actions" colspan="6">
                                 <a class="antoo" style="color:#fff; font-weight:500;">
                                     Selection(s) ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i>
                                 </a>
