- Creation du package de test - Creation du fichier JSON de la base de données - Creation du package DAO - Correction du beug sur le fomulaire Menu - Vérrou du formulaire à l'afficharge de l'alert de confirmation - Mise à jour du CSS sur les menus - Suppression de 'Liste des enregistrements' sur tous les menus - Suppression de l'icone sur le bouton d'authentification - Suppression du profil utilisateur sur la barre des menus - Mise à jour version d'application

--- a/GB/Views/Application/Principale.cshtml
+++ b/GB/Views/Application/Principale.cshtml
@@ -17,7 +17,9 @@
 
         <div class="page-title">
 
-            <h3>@ViewBag.Lang.Description_page</h3>
+            <h3>
+                <i class="fa fa-home"></i> @ViewBag.Lang.Description_page
+            </h3>
 
         </div>
 
