--- a/GB/Views/Home/Authentication.cshtml
+++ b/GB/Views/Home/Authentication.cshtml
@@ -48,7 +48,9 @@
 
                     <button id="btn_authentifier" type="submit" class="btn btn-lg btn-success btn-block"
                             data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> @ViewBag.Lang.Process ...">
-                        <i class="fa fa-check"></i> @ViewBag.Lang.To_log_in
+                            <b>
+                                @ViewBag.Lang.To_log_in
+                            </b>
                     </button>
 
                 </fieldset>
