--- a/GB/Resources/css/gb.style.css
+++ b/GB/Resources/css/gb.style.css
@@ -439,3 +439,17 @@ tr {
 .modal {
     z-index: 9999;
 }
+
+.site_title {
+    font-weight: bold;
+}
+
+.nav.side-menu>li>a {
+    margin-bottom: 0px;
+}
+
+.nav>li>a {
+    position: relative;
+    display: block;
+    padding: 10px 15px 12px;
+}
