--- a/GB/Views/Application/Main/_Menu.cshtml
+++ b/GB/Views/Application/Main/_Menu.cshtml
@@ -10,22 +10,8 @@
 
         <div class="clearfix"></div>
 
-        <!-- menu profile quick info -->
-        <div class="profile clearfix">
-            <div class="profile_pic">
-                <img src="~/Resources/images/png/Utilisateur.png" alt="Image @ViewBag.APP_NAME" class="img-circle profile_img">
-            </div>
-            <div class="profile_info">
-                <span>@(ViewBag.Lang.Welcome),</span>
-                <h2>@ViewBag.donnee.nom_utilisateur</h2>
-            </div>
-        </div>
-        <!-- /menu profile quick info -->
-
-        <br />
-
         <!-- sidebar menu -->
-        <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+        <div id="sidebar-menu" class="main_menu_side hidden-print main_menu" style="margin-top: 10px;">
             @Html.Raw(ViewBag.Menus)
         </div>
         <!-- /sidebar menu -->
