--- a/GB/Views/Securite/Role/_Modals.cshtml
+++ b/GB/Views/Securite/Role/_Modals.cshtml
@@ -82,3 +82,57 @@
     </div>
 
 </div>
+
+<!-- form 1 -->
+<div class="modal fade gb-temp-modal-menu" role="alert" data-backdrop="static" data-keyboard="false">
+
+    <div class="modal-dialog modal-lg">
+
+        <div class="modal-content">
+
+            <div class="modal-body">
+
+                <!-- Header -->
+                <p style="font-weight: bold; font-size: 18px;">
+                    <!-- Title -->
+                    <span>
+                        <i class="fa fa-list text-info"></i> Menus
+                    </span>
+                    <!-- Close bouton -->
+                    <button type="button" class="close float-right" data-dismiss="modal" aria-hidden="true" style="font-weight: bold;">
+                        <i class="fa fa-times"></i>
+                    </button>
+                </p>
+
+                <!-- Body -->
+                <div>
+
+
+
+                </div>
+
+                <!--Alert Message -->
+                <div id="gbAlert2"></div>
+
+            </div>
+
+            <div class="modal-footer">
+
+                <!-- Bouton de fermiture du modal -->
+                <button type="button" class="btn btn-default pull-left" data-dismiss="modal">
+                    <i class="glyphicon glyphicon-remove"></i> @ViewBag.Lang.Close
+                </button>
+
+                <!-- Bouton d'enregistrement du formulaire -->
+                <button class="btn btn-default btn-success pull-right" id="btn-configuration-selectionner" type="button"
+                        data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> @ViewBag.Lang.Process ...">
+                    <i class="fa fa-check"></i> @ViewBag.Lang.Select
+                </button>
+
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
