- Mise à jour application.

--- a/GB/Views/Securite/Menu.cshtml
+++ b/GB/Views/Securite/Menu.cshtml
@@ -69,7 +69,7 @@
                     <thead class="headings">
                         <tr>
                             <th width="20px">
-                                <input type="checkbox" id="check-all" class="flat">
+                                <input type="checkbox" id="check-all" class="flat gb-temps-icheck-menu">
                             </th>
                             <th class="column-title">Code</th>
                             <th class="column-title">@ViewBag.Lang.Name_french</th>
