--- a/GB/Resources/css/Views/Application-Main.css
+++ b/GB/Resources/css/Views/Application-Main.css
@@ -1,1 +1,7 @@
 
+.nav-md .container.body .right_col {
+    background-image:url(../../images/png/bg_grey.png);
+    background-size: 100% 100%;
+    color: black;
+    font-weight: bold;
+}
