- Activation du bouton d'enregistrement des autorisations modifié - Intégration du plugins pnotify - Mise à jour de la gestion du panier des menus - Intégration des traitement d'autorisation d'action - Mise à jour version d'application

--- a/GB/Views/Shared/_Modals.cshtml
+++ b/GB/Views/Shared/_Modals.cshtml
@@ -39,7 +39,7 @@
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-body">
-                <div class="gbalert alert-dark" role="alert">
+                <div class="gbalert" role="alert">
                     <!-- Bouton caché d'activation -->
                     <span id="modal_message_question_reponse" hidden="hidden">false</span>
                     <!-- ./Bouton caché d'activation -->
