--- a/GB/Views/Securite/Role.cshtml
+++ b/GB/Views/Securite/Role.cshtml
@@ -131,7 +131,7 @@
                                 <div class="pull-left">
 
                                     <div class="btn-group">
-                                        <button data-toggle="dropdown" id="btn-autorisation-ajouter" class="btn btn-default dropdown-toggle" type="button" aria-expanded="false">
+                                        <button data-toggle="dropdown" id="btn-autorisation-ajouter" class="btn btn-default dropdown-toggle gb-temps-btn-action-menu" type="button" aria-expanded="false">
                                             <i class="fa fa-plus"></i> <span class="hidden-xs">@ViewBag.Lang.Add</span> <i class="fa fa-caret-down"></i>
                                         </button>
                                         <ul role="menu" class="dropdown-menu">
@@ -148,7 +148,7 @@
                                         </ul>
                                     </div>
                                     <div class="btn-group">
-                                        <button data-toggle="dropdown" id="btn-autorisation-modifier" class="btn btn-default dropdown-toggle" type="button" aria-expanded="false">
+                                        <button data-toggle="dropdown" id="btn-autorisation-modifier" class="btn btn-default dropdown-toggle gb-temps-btn-action-menu" type="button" aria-expanded="false">
                                             <i class="fa fa-refresh"></i> <span class="hidden-xs">@ViewBag.Lang.Modify</span> <i class="fa fa-caret-down"></i>
                                         </button>
                                         <ul role="menu" class="dropdown-menu">
@@ -165,7 +165,7 @@
                                         </ul>
                                     </div>
                                     <div class="btn-group">
-                                        <button data-toggle="dropdown" id="btn-autorisation-supprimer" class="btn btn-default dropdown-toggle" type="button" aria-expanded="false">
+                                        <button data-toggle="dropdown" id="btn-autorisation-supprimer" class="btn btn-default dropdown-toggle gb-temps-btn-action-menu" type="button" aria-expanded="false">
                                             <i class="fa fa-remove"></i> <span class="hidden-xs">@ViewBag.Lang.Delete</span> <i class="fa fa-caret-down"></i>
                                         </button>
                                         <ul role="menu" class="dropdown-menu">
@@ -182,7 +182,7 @@
                                         </ul>
                                     </div>
                                     <div class="btn-group">
-                                        <button data-toggle="dropdown" id="btn-autorisation-imprimmer" class="btn btn-default dropdown-toggle" type="button" aria-expanded="false">
+                                        <button data-toggle="dropdown" id="btn-autorisation-imprimmer" class="btn btn-default dropdown-toggle gb-temps-btn-action-menu" type="button" aria-expanded="false">
                                             <i class="fa fa-print"></i> <span class="hidden-xs">@ViewBag.Lang.Print</span> <i class="fa fa-caret-down"></i>
                                         </button>
                                         <ul role="menu" class="dropdown-menu">
@@ -199,7 +199,7 @@
                                         </ul>
                                     </div>
                                     <div class="btn-group">
-                                        <button data-toggle="dropdown" id="btn-autorisation-lister" class="btn btn-default dropdown-toggle" type="button" aria-expanded="false">
+                                        <button data-toggle="dropdown" id="btn-autorisation-lister" class="btn btn-default dropdown-toggle gb-temps-btn-action-menu" type="button" aria-expanded="false">
                                             <i class="fa fa-list"></i> <span class="hidden-xs">@ViewBag.Lang.Listing</span> <i class="fa fa-caret-down"></i>
                                         </button>
                                         <ul role="menu" class="dropdown-menu">
@@ -220,7 +220,7 @@
 
                                 <div class="pull-right">
 
-                                    <button class="btn btn-success" id="btn-autorisation-enregistrer" type="button" onclick="gbMessage_Box({ est_echec: null, message: $GB_DONNEE_PARAMETRES.Lang.Maintenance_message })"
+                                    <button class="btn btn-success" id="btn-autorisation-enregistrer" type="button"
                                             data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> <span class='hidden-xs'>@ViewBag.Lang.Process ...</span>">
                                             <i class="fa fa-check"></i> <span class="hidden-xs" style="color: white;font-weight: bold;">@ViewBag.Lang.Save</span>    
                                     </button>
@@ -246,7 +246,7 @@
 
                                             <div class="col-xs-12 col-lg-3">
                                                 <div class="form-group">
-                                                    <select class="form-control" name="id_role" id="form_role_code" onchange="$('#form_role_libelle').val($('#form_role_code').val());" required>
+                                                    <select class="form-control" name="id_role" id="form_role_code" onchange="$('#form_role_libelle').val($('#form_role_code').val()); $('.gb-temps-btn-action-menu').prop('disabled', true);" required>
                                                         @Html.Raw(ViewBag.donnee.HTML_Select_code_role)
                                                     </select>
                                                 </div>
@@ -254,17 +254,17 @@
 
                                             <div class="col-xs-12 col-lg-3">
                                                 <div class="form-group">
-                                                    <select class="form-control" name="libelle" id="form_role_libelle" onchange="$('#form_role_code').val($('#form_role_libelle').val());" required>
+                                                    <select class="form-control" name="libelle" id="form_role_libelle" onchange="$('#form_role_code').val($('#form_role_libelle').val()); $('.gb-temps-btn-action-menu').prop('disabled', true);" required>
                                                         @Html.Raw(ViewBag.donnee.HTML_Select_code_libelle)
                                                     </select>
                                                 </div>
                                             </div>
 
                                             <div class="col-xs-12 col-lg-6">
-                                                <button class="btn btn-info" id="btn-autorisation-ajouter-menu" data-toggle="modal" data-target=".gb-temp-modal-menu" type="button">
+                                                <button class="btn btn-info gb-temps-btn-action-menu" id="btn-autorisation-ajouter-menu" data-toggle="modal" data-target=".gb-temp-modal-menu" type="button">
                                                     <i class="fa fa-plus"></i> @ViewBag.Lang.New_menus
                                                 </button>
-                                                <button class="btn btn-danger" id="btn-autorisation-supprimer-menu" type="button" onclick="gbMessage_Box({ est_echec: null, message: $GB_DONNEE_PARAMETRES.Lang.Maintenance_message })"
+                                                <button class="btn btn-danger gb-temps-btn-action-menu" id="btn-autorisation-supprimer-menu" type="button"
                                                         data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> <span class='hidden-xs'>@ViewBag.Lang.Process ...</span>">
                                                     <i class="fa fa-remove"></i> @ViewBag.Lang.Delete_menus
                                                 </button>
