--- a/GB/Views/Shared/_LayoutApplication.cshtml
+++ b/GB/Views/Shared/_LayoutApplication.cshtml
@@ -25,6 +25,8 @@
     <link href="@Url.Content("~/Plugins/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css")" rel="stylesheet" />
     <!-- iCheck -->
     <link href="@Url.Content("~/Plugins/iCheck/skins/flat/green.css")" rel="stylesheet" />
+    <!-- Notify -->
+    <link href="@Url.Content("~/Plugins/notify/pnotity.css")" rel="stylesheet" type="text/css" />
     <!-- datatables -->
     <link href="@Url.Content("~/Plugins/datatables/datatables/jquery.dataTables.min.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Plugins/datatables/datatables/buttons.bootstrap.min.css")" rel="stylesheet" />
@@ -59,6 +61,10 @@
     <script src="@Url.Content("~/Plugins/fastclick/lib/fastclick.js")" type="text/javascript"></script>
     <!-- NProgress -->
     @*<script src="@Url.Content("~/Plugins/nprogress/nprogress.js")" type="text/javascript"></script>*@
+    <!-- Notify -->
+    <script src="@Url.Content("~/Plugins/notify/pnotify.core.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Plugins/notify/pnotify.buttons.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Plugins/notify/pnotify.nonblock.js")" type="text/javascript"></script>
     <!-- jQuery custom content scroller -->
     <script src="@Url.Content("~/Plugins/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js")" type="text/javascript"></script>
     <!-- datatables -->
